# GENESIS---ORGANISATION-AI

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: architect.py  artifacts.py  execution.py  (+13 more)
backend/app/core/: config.py  database.py  errors.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py  architect.py  artifact.py  base.py  collaboration.py  deployment.py  errors.py  execution.py  execution_plan.py  memory.py  packaging.py  review.py  system_health.py  task_generator.py  validation.py  verification.py  worker_assignment.py  workflow.py  workspace.py
backend/app/services/: __init__.py  architect_parser.py  architect_prompt.py  artifact_catalog.py  artifact_generation.py  collaboration_engine.py  collaborative_execution.py  deployment_generation.py  execution_engine.py  execution_planner.py  gemini_client.py  ollama_client.py  openai_client.py  organization_architect.py  organization_memory.py  packaging_engine.py  project_review.py  system_health.py  task_generator.py  validation_engine.py  verification_engine.py  worker_assignment.py  workflow_engine.py  workspace_engine.py
backend/app/utilities/: __init__.py
backend/tests/: conftest.py  test_collaborative_execution.py  test_release_validation.py  test_workspace_quality.py
(+102 files in other folders)
